erDiagram
    BRANDS {
        bigint brand_id PK "not_null"
        text brand_name UK "not_null"
        text manufacturer "not_null"
        boolean partner_brand "not_null"
        boolean active "not_null"
        provenance_kind provenance "not_null"
    }
    CATEGORIES {
        bigint category_id PK "not_null"
        text category_name UK "not_null"
        bigint parent_category_id UK, FK "nullable"
        text description "nullable"
    }
    DAILY_DEMAND {
        bigint demand_observation_id PK "not_null"
        date observation_date UK "not_null"
        bigint store_id UK, FK "not_null"
        bigint sku_id UK, FK "not_null"
        bigint warehouse_id FK "not_null"
        integer requested_demand_units "not_null"
        integer realized_sales_units "not_null"
        integer lost_sales_units "not_null"
        boolean demand_censored_by_inventory "not_null"
        integer inventory_available_before "not_null"
        bigint promotion_id FK "nullable"
    }
    DELIVERIES {
        bigint delivery_id PK "not_null"
        text delivery_code UK "not_null"
        bigint order_id FK "nullable"
        bigint warehouse_id FK "not_null"
        bigint store_id FK "not_null"
        timestamp_without_time_zone shipped_at "nullable"
        timestamp_without_time_zone delivered_at "nullable"
        delivery_status status "not_null"
    }
    DELIVERY_ITEMS {
        bigint delivery_id PK, FK "not_null"
        bigint sku_id PK, FK "not_null"
        integer quantity "not_null"
    }
    INVENTORY {
        bigint inventory_id PK "not_null"
        date snapshot_date UK "not_null"
        bigint warehouse_id UK, FK "not_null"
        bigint sku_id UK, FK "not_null"
        integer opening_stock_quantity "not_null"
        integer stock_quantity "not_null"
        integer reserved_quantity "not_null"
        integer available_quantity "nullable"
        integer reorder_point "not_null"
        integer safety_stock "not_null"
        integer replenishment_quantity "not_null"
        integer replenishment_ordered_quantity "not_null"
        integer replenishment_lead_time_days "nullable"
        date expected_replenishment_date "nullable"
        integer demand_requested "not_null"
        integer demand_fulfilled "not_null"
        integer lost_sales_quantity "not_null"
        integer adjustment_quantity "not_null"
    }
    ORDER_ITEMS {
        bigint order_item_id PK "not_null"
        bigint order_id UK, FK "not_null"
        bigint sku_id UK, FK "not_null"
        integer quantity "not_null"
        numeric_12_2 unit_price "not_null"
        numeric_12_2 discount_amount "not_null"
        numeric_14_2 line_total "nullable"
    }
    ORDERS {
        bigint order_id PK "not_null"
        text order_code UK "not_null"
        bigint store_id FK "not_null"
        date order_date "not_null"
        date requested_delivery_date "not_null"
        date actual_delivery_date "nullable"
        order_status status "not_null"
        numeric_14_2 subtotal "not_null"
        numeric_14_2 discount_amount "not_null"
        numeric_14_2 total_amount "not_null"
        provenance_kind provenance "not_null"
        text external_source "nullable"
        text external_id "nullable"
    }
    PRODUCT_PRICES {
        bigint price_id PK "not_null"
        bigint store_id UK, FK "not_null"
        bigint sku_id UK, FK "not_null"
        date valid_from UK "not_null"
        date valid_to "not_null"
        numeric_12_2 regular_price "not_null"
        numeric_12_2 selling_price "not_null"
        provenance_kind provenance "not_null"
    }
    PRODUCTS {
        bigint product_id PK "not_null"
        bigint category_id FK "not_null"
        bigint brand_id UK, FK "not_null"
        text product_name UK "not_null"
        text description "nullable"
        boolean sugar_free "not_null"
        boolean active "not_null"
        provenance_kind provenance "not_null"
    }
    PROMOTION_SKUS {
        bigint promotion_id PK, FK "not_null"
        bigint sku_id PK, FK "not_null"
    }
    PROMOTION_STORES {
        bigint promotion_id PK, FK "not_null"
        bigint store_id PK, FK "not_null"
    }
    PROMOTIONS {
        bigint promotion_id PK "not_null"
        text promotion_name "not_null"
        text promotion_type "not_null"
        date start_date "not_null"
        date end_date "not_null"
        text discount_type "not_null"
        numeric_12_2 discount_value "not_null"
        text description "nullable"
        provenance_kind provenance "not_null"
    }
    REGIONS {
        bigint region_id PK "not_null"
        text region_name UK "not_null"
        text country UK "not_null"
    }
    SALES {
        bigint sale_id PK "not_null"
        date sale_date UK "not_null"
        bigint store_id UK, FK "not_null"
        bigint sku_id UK, FK "not_null"
        integer quantity_units "not_null"
        numeric_12_2 unit_price "not_null"
        numeric_14_2 gross_revenue "not_null"
        numeric_14_2 discount_amount "not_null"
        numeric_14_2 net_revenue "not_null"
        numeric_12_2 unit_cost "not_null"
        numeric_14_2 gross_profit "not_null"
        bigint promotion_id FK "nullable"
        provenance_kind provenance "not_null"
        text external_source "nullable"
        text external_id "nullable"
    }
    SKUS {
        bigint sku_id PK "not_null"
        bigint product_id UK, FK "not_null"
        text sku_code UK "not_null"
        text flavor UK "nullable"
        text package_type UK "not_null"
        integer volume_ml UK "not_null"
        integer units_per_case "not_null"
        numeric_12_2 base_price "not_null"
        numeric_12_2 standard_cost "not_null"
        boolean active "not_null"
        provenance_kind provenance "not_null"
    }
    STORES {
        bigint store_id PK "not_null"
        text external_store_code UK "nullable"
        text store_name "not_null"
        bigint region_id FK "not_null"
        text city "not_null"
        text store_type "not_null"
        text channel "not_null"
        numeric_12_2 floor_area_m2 "nullable"
        boolean active "not_null"
        date opened_at "not_null"
        provenance_kind provenance "not_null"
    }
    WAREHOUSES {
        bigint warehouse_id PK "not_null"
        text warehouse_code UK "not_null"
        text warehouse_name "not_null"
        bigint region_id FK "not_null"
        text city "not_null"
        integer capacity_units "nullable"
        boolean active "not_null"
    }
    CATEGORIES ||--o{ CATEGORIES : "parent_category_id → category_id"
    PROMOTIONS ||--o{ DAILY_DEMAND : "promotion_id → promotion_id"
    SKUS ||--|{ DAILY_DEMAND : "sku_id → sku_id"
    STORES ||--|{ DAILY_DEMAND : "store_id → store_id"
    WAREHOUSES ||--|{ DAILY_DEMAND : "warehouse_id → warehouse_id"
    ORDERS ||--o{ DELIVERIES : "order_id → order_id"
    STORES ||--|{ DELIVERIES : "store_id → store_id"
    WAREHOUSES ||--|{ DELIVERIES : "warehouse_id → warehouse_id"
    DELIVERIES ||--|{ DELIVERY_ITEMS : "delivery_id → delivery_id"
    SKUS ||--|{ DELIVERY_ITEMS : "sku_id → sku_id"
    SKUS ||--|{ INVENTORY : "sku_id → sku_id"
    WAREHOUSES ||--|{ INVENTORY : "warehouse_id → warehouse_id"
    ORDERS ||--|{ ORDER_ITEMS : "order_id → order_id"
    SKUS ||--|{ ORDER_ITEMS : "sku_id → sku_id"
    STORES ||--|{ ORDERS : "store_id → store_id"
    SKUS ||--|{ PRODUCT_PRICES : "sku_id → sku_id"
    STORES ||--|{ PRODUCT_PRICES : "store_id → store_id"
    BRANDS ||--|{ PRODUCTS : "brand_id → brand_id"
    CATEGORIES ||--|{ PRODUCTS : "category_id → category_id"
    PROMOTIONS ||--|{ PROMOTION_SKUS : "promotion_id → promotion_id"
    SKUS ||--|{ PROMOTION_SKUS : "sku_id → sku_id"
    PROMOTIONS ||--|{ PROMOTION_STORES : "promotion_id → promotion_id"
    STORES ||--|{ PROMOTION_STORES : "store_id → store_id"
    PROMOTIONS ||--o{ SALES : "promotion_id → promotion_id"
    SKUS ||--|{ SALES : "sku_id → sku_id"
    STORES ||--|{ SALES : "store_id → store_id"
    PRODUCTS ||--|{ SKUS : "product_id → product_id"
    REGIONS ||--|{ STORES : "region_id → region_id"
    REGIONS ||--|{ WAREHOUSES : "region_id → region_id"
